src/tui/snapshots/tok__tui__view__tests__board_codex.snap
---
source: src/tui/view.rs
expression: "draw(&app, 120, 40)"
---
TOKENOMICS  ·  1 account(s)  ·  cost is notional (usage proxy, not a bill)                                              
▲  1 account(s) at or above the warn threshold  ·  worst: Codex 88% warn · resets in 1h 11m                             
13.09K · — · usage 5s ago · authoritative · limits 1m ago                                                               
╔ ▶ Codex [codex] ═════════════════════════════════════════════════════════════════════════════════════════════════════╗
║5h ████████████████████████████████▊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 42% ok · resets in 1h 11m           ║
║wk ████████████████████████████████████████████████████████████████████▋░░░░░░░░░ 88% warn · resets in 1h 11m         ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
↑/↓ (or j/k) move · r refresh · i inactive · ? help · q quit
