src/tui/snapshots/tok__tui__view__tests__board_inactive.snap
---
source: src/tui/view.rs
expression: "draw(&app, 120, 40)"
---
TOKENOMICS  ·  3 account(s)  ·  cost is notional (usage proxy, not a bill)                                              
▲  2 account(s) at or above the warn threshold  ·  worst: Research 93% crit · resets in 1h 11m                          
280.54M · $335.95 (notional) · 271.20M/h · usage 8s ago · derived                                                       
burn · all accts ▁▂▁▄▃▆▅█                                                                                               
┌ Personal [claude] ───────────────────────────────────────────────────────────────────────────────────────────────────┐
│5h ████████████████████████████████▊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 42% ok · resets in 1h 11m           │
│wk n/a (enable overlay)                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
╔ ▶ Primary [claude] ══════════════════════════════════════════════════════════════════════════════════════════════════╗
║5h ███████████████████████████████████████████████████████████▎░░░░░░░░░░░░░░░░░░ 76% warn · resets in 1h 11m         ║
║wk n/a (enable overlay)                                                                                               ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
┌ Research [claude] ───────────────────────────────────────────────────────────────────────────────────────────────────┐
│5h ████████████████████████████████████████████████████████████████████████▌░░░░░ 93% crit · resets in 1h 11m         │
│wk n/a (enable overlay)                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Retired [claude] (inactive) ─────────────────────────────────────────────────────────────────────────────────────────┐
│5h ███████████████████████████████████████████████████████████████████████████▋░░ 97% crit · resets in 1h 11m         │
│wk n/a (enable overlay)                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
↑/↓ (or j/k) move · r refresh · i inactive · ? help · q quit
