src/tui/snapshots/tok__tui__view__tests__board_micro.snap
---
source: src/tui/view.rs
expression: "draw(&board(), 58, 9)"
---
TOKENOMICS  ·  3 acct  ·  $ = notional  ·  ▲2 over warn   
280.54M · $335n · 271.20M/h · usage 8s ago · drv          
burn · all accts ▁▂▁▄▃▆▅█                                 
▏  Personal ● ok    42% ███████████▍░░░░░░░░░░░░░░░ 1h 11m
                                                          
▊▶ Primary  ▲ warn  76% ████████████████████▌░░░░░░ 1h 11m
                                                          
▏  Research ✖ crit  93% █████████████████████████▏░ 1h 11m
↑/↓ move · r refresh · i inactive · ? help · q quit
