src/tui/snapshots/tok__tui__view__tests__board_overlay.snap
---
source: src/tui/view.rs
expression: "draw(&app, 120, 40)"
---
TOKENOMICS  ·  1 account(s)  ·  cost is notional (usage proxy, not a bill)                                              
▲  1 account(s) at or above the warn threshold  ·  worst: Primary Fable 92% crit · resets in 1h 11m                     
412.42M · $327.00 (notional) · 189.00M/h · usage 5s ago · authoritative · limits 2m ago                                 
╔ ▶ Primary [claude] ══════════════════════════════════════════════════════════════════════════════════════════════════╗
║5h ██████████████████████▋░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 29% ok · resets in 1h 11m           ║
║wk ████████████████████████████████████████████████████████████▉░░░░░░░░░░░░░░░░░ 78% warn · resets in 1h 11m         ║
║wk ███████████████████████████████████████████████████████████████████████▊░░░░░░ Fable 92% crit · resets in 1h 11m   ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
↑/↓ (or j/k) move · r refresh · i inactive · ? help · q quit
